<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>club.dawdler</groupId>
		<artifactId>dawdler</artifactId>
		<version>0.0.1-jdk17-RELEASES</version>
	</parent>
	<artifactId>dawdler-core</artifactId>
	<name>dawdler-core</name>
	<packaging>jar</packaging>
	<dependencies>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-access</artifactId>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-pool2</artifactId>
		</dependency>
		<dependency>
			<groupId>club.dawdler</groupId>
			<artifactId>dawdler-util</artifactId>
		</dependency>
		<dependency>
			<groupId>club.dawdler</groupId>
			<artifactId>dawdler-serialization</artifactId>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<encoding>${project.build.sourceEncoding}</encoding>
					<source>17</source>
					<target>17</target>
					<compilerArgs>
						<arg>--add-exports</arg>
						<arg>java.base/jdk.internal.loader=dawdler.core</arg>
						<arg>--add-exports</arg>
						<arg>java.base/jdk.internal.loader=dawdler.util</arg>
						<arg>--add-exports</arg>
						<arg>java.base/jdk.internal.misc=dawdler.core</arg>
						<arg>--add-exports</arg>
						<arg>java.base/jdk.internal.perf=dawdler.core</arg>
					</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
